--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,3 @@
-@-webkit-keyframes fade_out {
-    0% {
-        opacity: 1;
-    }
-  
-    100% {
-        opacity: 0;
-    }
-}
-  
-@keyframes fade_out {
-    0% {
-        opacity: 1;
-    }
-  
-    100% {
-        opacity: 0;
-    }
-}
-
 @-webkit-keyframes fade_in {
     0% {
         opacity: 0;
@@ -851,6 +831,10 @@ footer p {
 
     footer {
         padding-top: 80px;
+    }
+
+    footer p {
+        font-size: 1.5em;
     }
 }
 
