Another accessibility tweak

--- a/css/style.css
+++ b/css/style.css
@@ -1005,6 +1005,7 @@ footer p {
         height: 2vw;
         width: 17vw;
         font-size: 1.3em;
+        background-color: #00334e;
     }
 
     #video_section1 {
