--- a/css/style.css
+++ b/css/style.css
@@ -433,7 +433,7 @@ footer p {
     justify-content: center;
     align-content: center;
     justify-self: center;
-    background-color: #ee6f57;
+    background-color: #00334e;
     padding: 10px;
     margin: 5px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
@@ -696,7 +696,7 @@ footer p {
     animation-name: none !important;
 }
 
-.extra_img {
+.extra_img, .extras_p, .extras_div {
     display: none;
 }
 
@@ -707,11 +707,15 @@ footer p {
 }
 
 @media screen and (min-width: 600px){
+    .extras_div {
+        display: flex;
+    }
+
     .current_page {
         text-decoration: overline;
     }
 
-    .extra_img {
+    .extra_img, .extras_p {
         display: block;
     }
     
@@ -1005,7 +1009,6 @@ footer p {
         height: 2vw;
         width: 17vw;
         font-size: 1.3em;
-        background-color: #00334e;
     }
 
     #video_section1 {
