--- a/css/style.css
+++ b/css/style.css
@@ -702,7 +702,7 @@ footer p {
 
 @media screen and (prefers-reduced-motion: reduce){
     * {
-        animation: none;
+        animation-name: none !important;
     }
 }
 
