Resources used during development credited :)

--- a/css/style.css
+++ b/css/style.css
@@ -1100,4 +1100,8 @@ footer p {
     } 
 }
 
-/* Pallette: https://colorhunt.co/palette/201897 */
+/* 
+Pallette: https://colorhunt.co/palette/201897 
+3D Card code adapted from here: https://www.w3schools.com/css/css3_shadows_box.asp
+Images pulled from Austin's Facebook and Instagram with his permission
+*/
